package main

import (
	"context"
	"google.golang.org/protobuf/proto"
	"postapocgame/server/internal/actor"
	"postapocgame/server/internal/attrdef"
	"postapocgame/server/internal/network"
	"postapocgame/server/internal/protocol"
	"postapocgame/server/pkg/customerr"
	"postapocgame/server/pkg/log"
)

// ClientHandler Actoræ¶ˆæ¯å¤„ç†å™¨
type ClientHandler struct {
	*actor.BaseActorHandler
}

func NewClientHandler() *ClientHandler {
	h := &ClientHandler{
		BaseActorHandler: actor.NewBaseActorHandler("client_handler"),
	}
	h.OnInit()

	// æ³¨å†Œæ¶ˆæ¯å¤„ç†å™¨
	h.RegisterMessageHandler(uint16(protocol.S2CProtocol_S2CRegisterResult), h.handleRegisterResult)
	h.RegisterMessageHandler(uint16(protocol.S2CProtocol_S2CLoginResult), h.handleLoginResult)
	h.RegisterMessageHandler(uint16(protocol.S2CProtocol_S2CError), h.handleError)
	h.RegisterMessageHandler(uint16(protocol.S2CProtocol_S2CRoleList), h.handleRoleList)
	h.RegisterMessageHandler(uint16(protocol.S2CProtocol_S2CCreateRoleResult), h.handleCreateRoleResult)
	h.RegisterMessageHandler(uint16(protocol.S2CProtocol_S2CEnterScene), h.handleEnterScene)
	h.RegisterMessageHandler(uint16(protocol.S2CProtocol_S2CLoginSuccess), h.handleReconnectSuccess)
	h.RegisterMessageHandler(uint16(protocol.S2CProtocol_S2CReconnectSuccess), h.handleReconnectSuccess)
	h.RegisterMessageHandler(uint16(protocol.S2CProtocol_S2CEntityMove), h.handleEntityMove)
	h.RegisterMessageHandler(uint16(protocol.S2CProtocol_S2CEntityStopMove), h.handleEntityStopMove)
	h.RegisterMessageHandler(uint16(protocol.S2CProtocol_S2CSkillCastResult), h.handleSkillCastResult)
	h.RegisterMessageHandler(uint16(protocol.S2CProtocol_S2CSkillDamageResult), h.handleSkillDamageResult)
	h.RegisterMessageHandler(uint16(protocol.S2CProtocol_S2CTimeSync), h.handleTimeSync)

	return h
}

func (h *ClientHandler) getClient(msg actor.IActorMessage) (*GameClient, bool) {
	actorCtx, ok := msg.GetContext().Value("actorCtx").(actor.IActorContext)
	if !ok {
		return nil, false
	}
	client, ok := actorCtx.GetData("gameClient").(*GameClient)
	return client, ok
}

// handleError å¤„ç†é”™è¯¯æ¶ˆæ¯
func (h *ClientHandler) handleError(msg actor.IActorMessage) {
	var errResp protocol.ErrorData
	if err := proto.Unmarshal(msg.GetData(), &errResp); err == nil {
		log.Infof("\nâš ï¸ æœåŠ¡å™¨é”™è¯¯: %s\n> ", errResp.Msg)
	}
}

func (h *ClientHandler) handleRegisterResult(msg actor.IActorMessage) {
	client, ok := h.getClient(msg)
	if !ok {
		return
	}
	var resp protocol.S2CRegisterResultReq
	if err := proto.Unmarshal(msg.GetData(), &resp); err != nil {
		return
	}
	client.OnRegisterResult(&resp)
}

func (h *ClientHandler) handleLoginResult(msg actor.IActorMessage) {
	client, ok := h.getClient(msg)
	if !ok {
		return
	}
	var resp protocol.S2CLoginResultReq
	if err := proto.Unmarshal(msg.GetData(), &resp); err != nil {
		return
	}
	client.OnLoginResult(&resp)
}

// handleRoleList å¤„ç†è§’è‰²åˆ—è¡¨
func (h *ClientHandler) handleRoleList(msg actor.IActorMessage) {
	client, ok := h.getClient(msg)
	if !ok {
		return
	}

	var resp protocol.S2CRoleListReq
	if err := proto.Unmarshal(msg.GetData(), &resp); err != nil {
		log.Errorf("è§£æè§’è‰²åˆ—è¡¨å¤±è´¥: %v", err)
		return
	}

	log.Infof("\n[%s] ğŸ“œ è§’è‰²åˆ—è¡¨:\n", client.GetPlayerID())
	for i, role := range resp.RoleList {
		log.Infof("  [%d] è§’è‰²ID: %d, åå­—: %s, èŒä¸š: %d, ç­‰çº§: %d\n",
			i+1, role.RoleId, role.RoleName, role.Job, role.Level)
	}
	client.OnRoleList(&resp)
}

func (h *ClientHandler) handleCreateRoleResult(msg actor.IActorMessage) {
	client, ok := h.getClient(msg)
	if !ok {
		return
	}
	var resp protocol.S2CCreateRoleResultReq
	if err := proto.Unmarshal(msg.GetData(), &resp); err != nil {
		return
	}
	client.OnCreateRoleResult(&resp)
}

// handleEnterScene å¤„ç†è¿›å…¥åœºæ™¯
func (h *ClientHandler) handleEnterScene(msg actor.IActorMessage) {
	client, ok := h.getClient(msg)
	if !ok {
		return
	}

	var resp protocol.S2CEnterSceneReq
	if err := proto.Unmarshal(msg.GetData(), &resp); err != nil {
		log.Errorf("è§£æè¿›å…¥åœºæ™¯å“åº”å¤±è´¥: %v", err)
		return
	}
	entityData := resp.EntityData
	log.Infof("\n[%s] ğŸŒ æˆåŠŸè¿›å…¥åœºæ™¯ %d\n", client.GetPlayerID(), entityData.SceneId)
	log.Infof("  ä½ç½®: (%v, %v) HP=%d MP=%d\n",
		entityData.PosX,
		entityData.PosY,
		attrValueOrZero(entityData.Attrs, attrdef.AttrHP),
		attrValueOrZero(entityData.Attrs, attrdef.AttrMP),
	)
	log.Infof("  è§’è‰²: %s (Lv.%d)\n", entityData.ShowName, entityData.Level)
	client.OnEnterScene(&resp)
}

func (h *ClientHandler) handleLoginSuccess(msg actor.IActorMessage) {
	var resp protocol.S2CLoginSuccessReq
	if err := proto.Unmarshal(msg.GetData(), &resp); err != nil {
		log.Errorf("S2CLoginSuccessReq: %v", err)
		return
	}
	log.Infof("ReconnectKey:%s, roleInfo:%+v", resp.ReconnectKey, resp.RoleData)
}
func (h *ClientHandler) handleReconnectSuccess(msg actor.IActorMessage) {
	var resp protocol.S2CReconnectSuccessReq
	if err := proto.Unmarshal(msg.GetData(), &resp); err != nil {
		log.Errorf("S2CReconnectSuccessReq: %v", err)
		return
	}
	log.Infof("ReconnectKey:%s, roleInfo:%+v", resp.ReconnectKey, resp.RoleData)
}

func (h *ClientHandler) handleEntityMove(msg actor.IActorMessage) {
	client, ok := h.getClient(msg)
	if !ok {
		return
	}
	var resp protocol.S2CEntityMoveReq
	if err := proto.Unmarshal(msg.GetData(), &resp); err != nil {
		log.Errorf("è§£æ EntityMove å¤±è´¥: %v", err)
		return
	}
	client.OnEntityMove(&resp)
}

func (h *ClientHandler) handleEntityStopMove(msg actor.IActorMessage) {
	client, ok := h.getClient(msg)
	if !ok {
		return
	}
	var resp protocol.S2CEntityStopMoveReq
	if err := proto.Unmarshal(msg.GetData(), &resp); err != nil {
		log.Errorf("è§£æ EntityStopMove å¤±è´¥: %v", err)
		return
	}
	client.OnEntityStop(&resp)
}

func (h *ClientHandler) handleSkillCastResult(msg actor.IActorMessage) {
	client, ok := h.getClient(msg)
	if !ok {
		return
	}
	var resp protocol.S2CSkillCastResultReq
	if err := proto.Unmarshal(msg.GetData(), &resp); err != nil {
		log.Errorf("è§£æ SkillCastResult å¤±è´¥: %v", err)
		return
	}
	client.OnSkillCastResult(&resp)
}

func (h *ClientHandler) handleSkillDamageResult(msg actor.IActorMessage) {
	client, ok := h.getClient(msg)
	if !ok {
		return
	}
	var resp protocol.S2CSkillDamageResultReq
	if err := proto.Unmarshal(msg.GetData(), &resp); err != nil {
		log.Errorf("è§£æ SkillDamageResult å¤±è´¥: %v", err)
		return
	}
	client.OnSkillDamageResult(&resp)
}

func (h *ClientHandler) handleTimeSync(msg actor.IActorMessage) {
	client, ok := h.getClient(msg)
	if !ok {
		return
	}
	var resp protocol.S2CTimeSyncReq
	if err := proto.Unmarshal(msg.GetData(), &resp); err != nil {
		log.Errorf("è§£æ TimeSync å¤±è´¥: %v", err)
		return
	}
	client.OnTimeSync(&resp)
}

// NetworkMessageHandler ç½‘ç»œæ¶ˆæ¯å¤„ç†å™¨ï¼ˆè½¬å‘åˆ°Actorï¼‰
type NetworkMessageHandler struct {
	client *GameClient
}

func (h *NetworkMessageHandler) HandleMessage(ctx context.Context, conn network.IConnection, msg *network.Message) error {
	// è§£ç å®¢æˆ·ç«¯æ¶ˆæ¯
	clientMsg, err := h.client.codec.DecodeClientMessage(msg.Payload)
	if err != nil {
		log.Errorf("[%s] âŒ è§£ææ¶ˆæ¯å¤±è´¥: %v\n", h.client.GetPlayerID(), err)
		return customerr.Wrap(err)
	}

	// åˆ›å»ºActoræ¶ˆæ¯
	actorMsg := actor.NewBaseMessage(
		context.WithValue(ctx, "actorCtx", h.client.actorCtx),
		clientMsg.MsgId,
		clientMsg.Data,
	)

	// å‘é€åˆ°Actorå¤„ç†
	if err := h.client.actorMgr.SendMessageAsync(h.client.GetPlayerID(), actorMsg); err != nil {
		log.Errorf("[%s] å‘é€æ¶ˆæ¯åˆ°Actorå¤±è´¥: %v", h.client.GetPlayerID(), err)
		return customerr.Wrap(err)
	}

	return nil
}
